# statuspageio

./: pyproject.toml  setup.cfg  setup.py
statuspageio/: __init__.py  client.py  configuration.py  errors.py  http_client.py  services.py  version.py
