[tool.poetry]
name = "statuspageio"
version = "0.1.1"
description = ""
authors = ["gdelaney <gdelaney@ebay.com>"]

[tool.poetry.dependencies]
python = "^3.7"
munch = "^2.5.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
target-version = ["py310"]

[tool.isort]
length_sort = false
from_first = false
combine_as_imports = false
line_length = 99
lines_after_imports = 2
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
force_grid_wrap = 0
default_section = "THIRDPARTY"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
